--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -28,7 +28,7 @@ es:
       send_instructions: 'Usted recibirá un email con instrucciones de como confirmar su cuenta en unos minutos.'
       confirmed: 'Su cuenta ha sido confirmada exitosamente. Ahora usted puede ingresar.'
     registrations:
-      signed_up: "Se ha registrado con exito. Si está activado, la confirmación será enviada a su correo electrónico."
+      signed_up: "Usuario creado!."
       updated: 'Ha actualizado su cuenta exitosamente.'
       destroyed: 'Adios! Su cuenta ha sido cancelada exitosamente. Esperamos verlo pronto.'
     unlocks:
