--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -114,7 +114,7 @@ es:
       fechahora: "%d-%b-%Y %H:%M"
       fecha: "%d-%b-%Y"
       short: "%d de %b a las %H:%M hrs"
-      default: "%a, %d de %b de %Y a las %H:%M:%S %Z"
+      default: "%a, %d de %B de %Y a las %H:%M hs"
       long: "%A, %d de %B de %Y a las %I:%M %p"
     am: "am"
     pm: "pm"
