Modificaciones de Expedientes para que vuelva a funcionar

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -106,6 +106,7 @@ es:
       - noviembre
       - diciembre
     formats:
+      fechahora: "%d-%b-%Y"
       short: "%d de %b"
       default: "%d/%m/%Y"
       long: "%A, %d de %B de %Y"
